feature: adiciona cadastro e login na aplicação
